--- a/Views/App.xaml
+++ b/Views/App.xaml
@@ -2,8 +2,16 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Views"
+             xmlns:vm="clr-namespace:ViewModels;assembly=ViewModels"
+             xmlns:cus="clr-namespace:Views.CustomControl"
              Startup="Application_Startup">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resource/ResourceDictionary.xaml"></ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+            <vm:HomeVM x:Key="HomeVM"/>
+            <vm:LoginVM x:Key="LoginVM"/>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
